2021-04/04-week/external-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service

spec:
  type: ExternalName
  externalName: google.com
