2021-04/04-week/svc-clientip-node-web-ports-name.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-node

spec:
  ports:
  - port: 80
    targetPort: node-http

  selector:
    app: node-web

  sessionAffinity: ClientIP
