2021-04/04-week/svc-headless-node-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-node-headless

spec:
  clusterIP: None

  ports:
  - port: 80
    targetPort: 8080

  selector:
    app: node-web
