2021-04/04-week/svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-loadbalancer

spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080

  selector:
    app: node-web
