2021-04/04-week/svc-no-selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service

spec:
  ports:
  - port: 80
