2021-04/04-week/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-nodeport

spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30123

  selector:
    app: node-web
